paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/add_op_1a/sample_004/target.compile.log
error[E0503]: cannot use `a[_][_]` because it was mutably borrowed
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/add_op_1a/sample_004/target.rs:6:8
  |
3 |     let mut p: &mut [[i32; 3]] = &mut a;
  |                                  ------ `a` is borrowed here
...
6 |     if a[1][2] != 99 {
  |        ^^^^^^^ use of borrowed `a`
...
9 |     let n = ((p.as_ptr() as usize - a.as_ptr() as usize) / std::mem::size_of::<[i32; 3]>()) as i32;
  |               - borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0503`.